[package]
name = "grid-walk-rust-data-loader"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5.5"
aws-credential-types = "1.2.0"
aws-sdk-sts = "1.39.0"
aws-types = "1.3.3"
deltalake = { version = "0.19.0", features = ["s3"] }
deltalake-aws = "0.1.4"
datafusion = "41.0.0"
object_store = { version = "0.11.0", features = ["aws"] }
tokio = { version = "1.39.3", features = ["full"] }
url = "2.5.2"
